# sexcel

./: .gitignore  README.md  example.py  pyproject.toml
aioexcel/: __init__.py  impl.py
examples/: example.py
sexcel/: __init__.py  impl.py
