[tool.poetry]
name = "aioexcel"
version = "0.1.0"
description = "A simple library to work with xlsx files in an asynchronous manner"
authors = ["prostomarkeloff <28061158+prostomarkeloff@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
openpyxl = "^3.1.3"
aiofile = "^3.8.8"
excel-formulas-calculator = "^0.5.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
