[tool.poetry]
name = "sexcel"
version = "0.1.0"
description = "Work with excel like an incel"
authors = ["prostomarkeloff <28061158+prostomarkeloff@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
openpyxl = "^3.1.3"
excel-formulas-calculator = "^0.5.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
